# RayCaster

./: CMakeLists.txt  Makefile  Raycaster_lib.cpp  image_generator  main.cpp  out.ppm  output.ppm
Proc_graf/: CMakeLists.txt  main.cpp
Proc_graf/Core/: Camera.cpp  Camera.hpp  Ray.cpp  Ray.hpp  Render.cpp  Render.hpp  Scene.cpp  Scene.hpp
Proc_graf/Geometry/: Mesh.cpp  Mesh.hpp  Plane.cpp  Plane.hpp  Shape.cpp  Shape.hpp  Sphere.cpp  Sphere.hpp
Proc_graf/Math/: Matrix4x4.cpp  Matrix4x4.hpp  Point3d.cpp  Point3d.hpp  Vector3d.cpp  Vector3d.hpp
Ray-Tracing-main/: geometria.cpp  out.ppm
Ray-Tracing-main/Proc_graf/: CMakeLists.txt  main.cpp
Ray-Tracing-main/Proc_graf/Core/: Render.cpp  Render.hpp  Scene.cpp
Ray-Tracing-main/Proc_graf/Geometry/: Mesh.hpp  Plane.cpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
Ray-Tracing-main/Proc_graf/Math/: Vector3d.hpp
Ray-Tracing-main/utils/Scene/: sceneSchema.hpp
tracer/: Makefile  image_generator  output.ppm
tracer/input/: monkeyScene.json
tracer/trials/: Ray.cpp  Ray.hpp  camera.hpp  color.hpp  commom.hpp  hittable.h  image_generator  interval.hpp  light.hpp  main.cpp  plane.hpp  sphere.hpp  triangle.hpp
tracer/trials/MeshReader/: Colormap.cpp  ObjReader.cpp
tracer/trials/Scene/: sceneParser.cpp  sceneSchema.hpp
tracer/trials/math/: Matrix4x4.hpp  Point3d.cpp  Point3d.hpp  Vector3d.cpp  Vector3d.hpp
trials/: Ray.hpp  camera.hpp  commom.hpp  hittable_list.hpp  main.cpp  plane.hpp  triangle.hpp
trials/math/: Matrix4x4.cpp
trials/utils/input/: case4.json  case5.json  (+5 more)
utils/input/: caso5.json
(+3 files in other folders)
